# ChangeLog for media-gfx/swftools
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/swftools/ChangeLog,v 1.13 2006/01/12 18:03:54 vanquirius Exp $

  12 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> swftools-0.6.2.ebuild,
  swftools-0.7.0.ebuild:
  Update HOMEPAGE and SRC_URI for bug 118787. Thanks to Brian Preston <brian
  at preston dot se>.

  17 Dec 2005; Luca Barbato <lu_zero@gentoo.org> swftools-0.7.0.ebuild:
  Removing Avi support

  11 Dec 2005; Marcelo Goes <vanquirius@gentoo.org> swftools-0.6.2.ebuild,
  swftools-0.7.0.ebuild:
  Mark 0.6.2 x86 stable. Removing unnecessary src_compile(), do not dodoc
  COPYING or INSTALL.

*swftools-0.7.0 (10 Dec 2005)

  10 Dec 2005; Marcelo Goes <vanquirius@gentoo.org> metadata.xml,
  +swftools-0.7.0.ebuild:
  0.7.0 version bump for bug 114632. Thanks to Matthias Bethke <matthias at
  towiski dot de>. Also, making myself maintainer of this package.

  09 Apr 2005; Simon Stelling <blubb@gentoo.org> swftools-0.6.2.ebuild:
  added ~amd64

*swftools-0.6.2 (30 Nov 2004)

  30 Nov 2004; Don Seiler <rizzo@gentoo.org> swftools-0.5.0-r1.ebuild,
  +swftools-0.6.2.ebuild:
  Version bump

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> swftools-0.5.0-r1.ebuild:
  Add inherit eutils

  21 Feb 2004; Don Seiler <rizzo@gentoo.org>; swftools-0.5.0-r1.ebuild:
  Correcting deps and avi2swf only works with specificed version

*swftools-0.5.0-r1 (13 Feb 2004)

  13 Feb 2004; Don Seiler <rizzo@gentoo.org>; swftools-0.5.0-r1.ebuild,
  files/swftools-0.5.0-font.patch:
  Revision bump for font patch

*swftools-0.5.0 (09 Feb 2004)

  09 Feb 2004; Don Seiler <rizzo@gentoo.org>; swftools-0.5.0.ebuild:
  Version bump

  18 Nov 2003; Don Seiler <rizzo@gentoo.org>; swftools-0.4.4.ebuild:
  Added missing RDEPEND apps

*swftools-0.4.4 (18 Nov 2003)

  18 Nov 2003; Don Seiler <rizzo@gentoo.org>; metadata.xml,
  swftools-0.4.4.ebuild: