@@ -1,6 +1,8 @@
-MD5 d07ab72171beeee50347d483dd56a0ac ChangeLog 2011
+MD5 fc998305cc3a306ef5db1048bb71c8d8 ChangeLog 2246
 MD5 15aa8ade8fb71cd3ecb378d6b47ec99d files/digest-swftools-0.6.2 67
 MD5 99faa6b769b99cb31e6340ebfcd8aa56 files/digest-swftools-0.7.0 67
+MD5 cdd08117f3b8f8929a0ec54aabf18ecb files/digest-swftools-0.7.1.20051207 65
 MD5 df1755e88d0ee1163718c633acf18d07 metadata.xml 405
 MD5 693f9ddcee30675a8685a7710d2d4ce9 swftools-0.6.2.ebuild 637
 MD5 143175483afd7388babbd1a4a7ed8a03 swftools-0.7.0.ebuild 638
+MD5 c284f734bf31ee8b6de64aea95c416d5 swftools-0.7.1.20051207.ebuild 738
