@@ -1,6 +1,13 @@
 # ChangeLog for media-gfx/swftools
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/swftools/ChangeLog,v 1.13 2006/01/12 18:03:54 vanquirius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/swftools/ChangeLog,v 1.14 2006/01/12 18:19:04 vanquirius Exp $
+
+*swftools-0.7.1.20051207 (12 Jan 2006)
+
+  12 Jan 2006; Marcelo Goes <vanquirius@gentoo.org>
+  +swftools-0.7.1.20051207.ebuild:
+  Add 0.7.1 development version. It is in package.mask and it may break at any
+  time. You've been warned.
 
   12 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> swftools-0.6.2.ebuild,
   swftools-0.7.0.ebuild:
